# oresat-helmholtz

./: .gitignore  CONTRIBUTING.md  HelmholtzCage.py  LICENSE  MagneticFieldCurrentRelation.py  Makefile  OriginalMagno.py  Power_Supply.py  Power_Supply_Original.txt  README.md  SOP.md  ZXY6005S.py  ZXY6005s.py  cage_cal.csv  cage_controler.py  cage_controller.py  command_line.py  driver.py  graph.py  magnetic_field_current_relation.py  main.py  new_window.py  pyproject.toml  pytest.ini  requirements.txt  serial_PSU_control.py  setup.py  utilities.py  window.py  window_utils.py
Arduino_Comms/: Arduino.py  COMMS_README.txt  PSAS_HHCage.ino
Core Code/: MAG3110_Test.py  Power_Supply.py
V0/: OriginalMagno.txt  PSU_control.py  Power_Supply_Original.txt  kaz.py  legacy_plot_graph.py  useless_math.py  window_utils.py
core_code/: TemperatureSensorTEST.py  ZXY6005s.py
deprecated/: OriginalTemSen.py
distribution-pcb/: GPIO-connector.lbr  HelmholtzCage.lbr  helmholtz-distribution-pcb.brd  helmholtz-distribution-pcb.sch  helmholtz_cage_pcb_design.brd  helmholtz_cage_pcb_design.sch
docs/: SOP.md  arduino.md  class_diagram.mmd  conf.py  hshell.md  index.rst  magmeter.md  manindex.rst  powsups.md  utils.md
drivers/: PSAS_HHCage.ino
gui/: gui.py
hardware/: electrical_resources.txt
helmholtzcage/: Arduino.py  HelmholtzShell.py  Magnetometer.py  ZXY6005s.py  __init__.py  utils.py
hooks/: init-hooks.sh  pre-push.sh
oresat_helmholtz/: .cage_controller.py.swp  .utilities.py.swp  Arduino.py  ZXY6005s.py  __init__.py  __main__.py  cage_controller.py  command_line.py  (+10 more)
(+23 files in other folders)
