[project]
name = "oresat_helmholtz"
description = "Oresat QA infrastructure using our Helmholtz cage."
dependencies = [
  "setuptools",
  "pyserial"
]
version = "0.0.1"

[project.urls]
Homepage = "TODO"

[project.optional-dependencies]
dev = [
  "pip>=21.3",
  "pytest",
  "setuptools",
  'black',
  "mypy",
  "isort",
  "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
profile = "black"
src_paths = [
  "oresat_helmholtz",
  "test"
]

[tool.mypy]
files = ['oresat_helmholtz/**/*.py']
